force-app/main/default/objects/FA_Attributes_Translation__c/FA_Attributes_Translation__c.object-meta.xml
<CustomObject>
    <label>FA_Attributes Translation</label>
    <nameField>
        <label>FA_Attributes Translation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA_Attributes Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>