force-app/main/default/objects/FA_Attributes_Translation__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>