force-app/main/default/objects/FA_Attributes_Translation__c/fields/TextOpp8__c.field-meta.xml
<CustomField>
    <fullName>TextOpp8__c</fullName>
    <label>TextOpp8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>