force-app/main/default/objects/FA_Attributes_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute__c</columns>
    <columns>Text1__c</columns>
    <columns>Text2__c</columns>
    <columns>Text3__c</columns>
    <columns>Text4__c</columns>
    <columns>Text5__c</columns>
    <columns>Text6__c</columns>
    <columns>Text7__c</columns>
    <columns>Text8__c</columns>
    <columns>Text9__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>